# demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-ec2.yml
deploy/: .env.example  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  generate-env.sh  nginx.conf
deploy/nginx/: default.conf
docs/: SKILLS_DEVELOPMENT_GUIDE.md
frontend/: .env.example  package.json  pnpm-lock.yaml
migrations/: env.py
scripts/: init_db.py
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  factory.py  manager.py
src/agents/implementations/: __init__.py  configurable_agent.py  dialog_agent.py  tool_agent.py
src/api/: app.py  run.py
src/api/schemas/: __init__.py  agent.py  common.py  conversation.py  space.py
src/api/v1/: __init__.py
src/api/v1/endpoints/: agents.py  chat.py  conversations.py  spaces.py
src/core/: config.py
src/models/: __init__.py  agent.py  conversation.py  space.py  user.py
src/services/: __init__.py  agent_service.py  conversation_service.py  space_service.py  user_service.py
tests/agents/: test_echo_agent.py
tests/models/: test_mock_data_integrity.py
